<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <ImageView
            android:id="@+id/guillotine_hamburger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />


        <TextView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="登录界面"
            android:textColor="#fff"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="66dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_str_hint_phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_str_hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="66dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/editText_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="新密码" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/layout_str_hint_input_code"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/button_send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:text="@string/msg_get_verify_code"
            android:textColor="#fff" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorPrimary"
        android:text="@string/layout_str_hint_new_pwd"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>